add_executable(1_Two_Sum array/1_Two_Sum.cpp)
add_executable(20_Valid_Parentheses stack/20_Valid_Parentheses.cpp)
add_executable(21_Merge_Two_Sorted_Lists linked_list/21_Merge_Two_Sorted_Lists.cpp)
add_executable(53_Maximum_Subarray array/53_Maximum_Subarray.cpp)
add_executable(70_Climbing_Stairs dynamic_programming/70_Climbing_Stairs.cpp)
add_executable(101_Symmetric_Tree tree/101_Symmetric_Tree.cpp)
add_executable(104_Maximum_Depth_of_Binary_Tree tree/104_Maximum_Depth_of_Binary_Tree.cpp)
add_executable(121_Best_Time_to_Buy_and_Sell_Stock dynamic_programming/121_Best_Time_to_Buy_and_Sell_Stock.cpp)
add_executable(136_Single_Number array/136_Single_Number.cpp)
add_executable(141_Linked_List_Cycle linked_list/141_Linked_List_Cycle.cpp)
add_executable(155_Min_Stack stack/155_Min_Stack.cpp)
add_executable(160_Intersection_of_Two_Linked_Lists linked_list/160_Intersection_of_Two_Linked_Lists.cpp)
add_executable(169_Majority_Element array/169_Majority_Element.cpp)
add_executable(198_House_Robber dynamic_programming/198_House_Robber.cpp)
add_executable(206_Reverse_Linked_List linked_list/206_Reverse_Linked_List.cpp)
add_executable(226_Invert_Binary_Tree tree/226_Invert_Binary_Tree.cpp)
add_executable(234_Palindrome_Linked_List linked_list/234_Palindrome_Linked_List.cpp)
add_executable(268_Missing_Number array/268_Missing_Number.cpp)
add_executable(283_Move_Zeroes array/283_Move_Zeroes.cpp)
add_executable(437_Path_Sum_III tree/437_Path_Sum_III.cpp)
add_executable(448_Find_All_Numbers_Disappeared_in_an_Array array/448_Find_All_Numbers_Disappeared_in_an_Array.cpp)
add_executable(543_Diameter_of_Binary_Tree tree/543_Diameter_of_Binary_Tree.cpp)
add_executable(581_Shortest_Unsorted_Continuous_Subarray array/581_Shortest_Unsorted_Continuous_Subarray.cpp)
add_executable(617_Merge_Two_Binary_Trees tree/617_Merge_Two_Binary_Trees.cpp)
