add_executable(1_Two_Sum array/1_Two_Sum.cpp)
add_executable(20_Valid_Parentheses stack/20_Valid_Parentheses.cpp)
add_executable(21_Merge_Two_Sorted_Lists linked_list/21_Merge_Two_Sorted_Lists.cpp)
add_executable(53_Maximum_Subarray array/53_Maximum_Subarray.cpp)
add_executable(70_Climbing_Stairs dynamic_programming/70_Climbing_Stairs.cpp)
add_executable(101_Symmetric_Tree tree/101_Symmetric_Tree.cpp)
add_executable(104_Maximum_Depth_of_Binary_Tree tree/104_Maximum_Depth_of_Binary_Tree.cpp)
add_executable(121_Best_Time_to_Buy_and_Sell_Stock dynamic_programming/121_Best_Time_to_Buy_and_Sell_Stock.cpp)
add_executable(136_Single_Number array/136_Single_Number.cpp)
add_executable(141_Linked_List_Cycle linked_list/141_Linked_List_Cycle.cpp)
add_executable(155_Min_Stack stack/155_Min_Stack.cpp)
add_executable(160_Intersection_of_Two_Linked_Lists linked_list/160_Intersection_of_Two_Linked_Lists.cpp)
add_executable(169_Majority_Element array/169_Majority_Element.cpp)
add_executable(198_House_Robber dynamic_programming/198_House_Robber.cpp)
add_executable(206_Reverse_Linked_List linked_list/206_Reverse_Linked_List.cpp)
add_executable(226_Invert_Binary_Tree tree/226_Invert_Binary_Tree.cpp)
add_executable(234_Palindrome_Linked_List linked_list/234_Palindrome_Linked_List.cpp)
add_executable(268_Missing_Number bit_manipulation/268_Missing_Number.cpp)
add_executable(283_Move_Zeroes array/283_Move_Zeroes.cpp)
add_executable(437_Path_Sum_III tree/437_Path_Sum_III.cpp)
add_executable(448_Find_All_Numbers_Disappeared_in_an_Array array/448_Find_All_Numbers_Disappeared_in_an_Array.cpp)
add_executable(543_Diameter_of_Binary_Tree tree/543_Diameter_of_Binary_Tree.cpp)
add_executable(581_Shortest_Unsorted_Continuous_Subarray array/581_Shortest_Unsorted_Continuous_Subarray.cpp)
add_executable(7_Reverse_Integer math/7_Reverse_Integer.cpp)
add_executable(13_Roman_to_Integer math/13_Roman_to_Integer.cpp)
add_executable(14_Longest_Common_Prefix string/14_Longest_Common_Prefix.cpp)
add_executable(26_Remove_Duplicates_from_Sorted_Array array/26_Remove_Duplicates_from_Sorted_Array.cpp)
add_executable(28_Implement_strStr string/28_Implement_strStr.cpp)
add_executable(38_Count_and_Say string/38_Count_and_Say.cpp)
add_executable(66_Plus_One array/66_Plus_One.cpp)
add_executable(69_Sqrt_x math/69_Sqrt_x.cpp)
add_executable(108_Convert_Sorted_Array_to_Binary_Search_Tree tree/108_Convert_Sorted_Array_to_Binary_Search_Tree.cpp)
add_executable(118_Pascals_Triangle array/118_Pascals_Triangle.cpp)
add_executable(122_Best_Time_to_Buy_and_Sell_Stock_II greedy/122_Best_Time_to_Buy_and_Sell_Stock_II.cpp)
add_executable(125_Valid_Palindrome two_pointer/125_Valid_Palindrome.cpp)
add_executable(171_Excel_Sheet_Column_Number math/171_Excel_Sheet_Column_Number.cpp)
add_executable(172_Factorial_Trailing_Zeroes math/172_Factorial_Trailing_Zeroes.cpp)
add_executable(189_Rotate_Array array/189_Rotate_Array.cpp)
add_executable(190_Reverse_Bits bit_manipulation/190_Reverse_Bits.cpp)
add_executable(191_Number_of_1_Bits bit_manipulation/191_Number_of_1_Bits.cpp)
add_executable(202_Happy_Number math/202_Happy_Number.cpp)
add_executable(204_Count_Primes math/204_Count_Primes.cpp)
add_executable(217_Contains_Duplicate array/217_Contains_Duplicate.cpp)
add_executable(237_Delete_Node_in_a_Linked_List linked_list/237_Delete_Node_in_a_Linked_List.cpp)
add_executable(242_Valid_Anagram hash/242_Valid_Anagram.cpp)
add_executable(326_Power_of_Three math/326_Power_of_Three.cpp)
add_executable(344_Reverse_String two_pointer/344_Reverse_String.cpp)
add_executable(350_Intersection_of_Two_Arrays_II two_pointer/350_Intersection_of_Two_Arrays_II.cpp)
add_executable(371_Sum_of_Two_Integers bit_manipulation/371_Sum_of_Two_Integers.cpp)
add_executable(387_First_Unique_Character_in_a_String hash/387_First_Unique_Character_in_a_String.cpp)
add_executable(412_Fizz_Buzz string/412_Fizz_Buzz.cpp)
add_executable(107_Binary_Tree_Level_Order_Traversal_II tree/107_Binary_Tree_Level_Order_Traversal_II.cpp)
add_executable(167_Two_Sum_II_Input_array_is_sorted two_pointer/167_Two_Sum_II_Input_array_is_sorted.cpp)
add_executable(205_Isomorphic_Strings hash/205_Isomorphic_Strings.cpp)
add_executable(110_Balanced_Binary_Tree tree/110_Balanced_Binary_Tree.cpp)
add_executable(100_Same_Tree tree/100_Same_Tree.cpp)
add_executable(83_Remove_Duplicates_from_Sorted_List linked_list/83_Remove_Duplicates_from_Sorted_List.cpp)
add_executable(58_Length_of_Last_Word string/58_Length_of_Last_Word.cpp)
add_executable(67_Add_Binary math/67_Add_Binary.cpp)
add_executable(9_Palindrome_Number math/9_Palindrome_Number.cpp)
add_executable(119_Pascal_s_Triangle_II array/119_Pascal_s_Triangle_II.cpp)
add_executable(225_Implement_Stack_using_Queues stack/225_Implement_Stack_using_Queues.cpp)
add_executable(232_Implement_Queue_using_Stacks stack/232_Implement_Queue_using_Stacks.cpp)
add_executable(235_Lowest_Common_Ancestor_of_a_Binary_Search_Tree tree/235_Lowest_Common_Ancestor_of_a_Binary_Search_Tree.cpp)
