add_executable(2_Add_Two_Numbers linked_list/2_Add_Two_Numbers.cpp)
add_executable(3_Longest_Substring_Without_Repeating_Characters hash/3_Longest_Substring_Without_Repeating_Characters.cpp)
add_executable(5_Longest_Palindromic_Substring string/5_Longest_Palindromic_Substring.cpp)
add_executable(11_Container_With_Most_Water two_pointer/11_Container_With_Most_Water.cpp)
add_executable(15_3Sum array/15_3Sum.cpp)
add_executable(17_Letter_Combinations_of_a_Phone_Number backtracking/17_Letter_Combinations_of_a_Phone_Number.cpp)
add_executable(19_Remove_Nth_Node_From_End_of_List linked_list/19_Remove_Nth_Node_From_End_of_List.cpp)
add_executable(22_Generate_Parentheses stack/22_Generate_Parentheses.cpp)
add_executable(33_Search_in_Rotated_Sorted_Array binary_search/33_Search_in_Rotated_Sorted_Array.cpp)
add_executable(34_Find_First_and_Last_Position_of_Element_in_Sorted_Array binary_search/34_Find_First_and_Last_Position_of_Element_in_Sorted_Array.cpp)
add_executable(46_Permutations backtracking/46_Permutations.cpp)
add_executable(48_Rotate_Image array/48_Rotate_Image.cpp)
add_executable(49_Group_Anagrams hash/49_Group_Anagrams.cpp)
add_executable(55_Jump_Game greedy/55_Jump_Game.cpp)
add_executable(56_Merge_Intervals array/56_Merge_Intervals.cpp)
add_executable(62_Unique_Paths dynamic_programming/62_Unique_Paths.cpp)
add_executable(64_Minimum_Path_Sum dynamic_programming/64_Minimum_Path_Sum.cpp)
add_executable(75_Sort_Colors two_pointer/75_Sort_Colors.cpp)
add_executable(78_Subsets backtracking/78_Subsets.cpp)
add_executable(79_Word_Search backtracking/79_Word_Search.cpp)
add_executable(94_Binary_Tree_Inorder_Traversal tree/94_Binary_Tree_Inorder_Traversal.cpp)
add_executable(96_Unique_Binary_Search_Trees dynamic_programming/96_Unique_Binary_Search_Trees.cpp)
add_executable(98_Validate_Binary_Search_Tree tree/98_Validate_Binary_Search_Tree.cpp)
add_executable(102_Binary_Tree_Level_Order_Traversal tree/102_Binary_Tree_Level_Order_Traversal.cpp)
add_executable(105_Construct_Binary_Tree_from_Preorder_and_Inorder_Traversal tree/105_Construct_Binary_Tree_from_Preorder_and_Inorder_Traversal.cpp)
add_executable(114_Flatten_Binary_Tree_to_Linked_List tree/114_Flatten_Binary_Tree_to_Linked_List.cpp)
add_executable(138_Copy_List_with_Random_Pointer linked_list/138_Copy_List_with_Random_Pointer.cpp)
add_executable(139_Word_Break dynamic_programming/139_Word_Break.cpp)
add_executable(142_Linked_List_Cycle_II linked_list/142_Linked_List_Cycle_II.cpp)
add_executable(146_LRU_Cache list/146_LRU_Cache.cpp)
add_executable(148_Sort_List linked_list/148_Sort_List.cpp)
add_executable(152_Maximum_Product_Subarray dynamic_programming/152_Maximum_Product_Subarray.cpp)
add_executable(200_Number_of_Islands backtracking/200_Number_of_Islands.cpp)
add_executable(207_Course_Schedule topo_graph/207_Course_Schedule.cpp)
add_executable(208_Implement_Trie_Prefix_Tree trie/208_Implement_Trie_Prefix_Tree.cpp)
add_executable(213_House_Robber_II dynamic_programming/213_House_Robber_II.cpp)
add_executable(215_Kth_Largest_Element_in_an_Array divide_conquer/215_Kth_Largest_Element_in_an_Array.cpp)
add_executable(221_Maximal_Square dynamic_programming/221_Maximal_Square.cpp)
add_executable(236_Lowest_Common_Ancestor_of_a_Binary_Tree tree/236_Lowest_Common_Ancestor_of_a_Binary_Tree.cpp)
add_executable(238_Product_of_Array_Except_Self dynamic_programming/238_Product_of_Array_Except_Self.cpp)
add_executable(240_Search_a_2D_Matrix_II binary_search/240_Search_a_2D_Matrix_II.cpp)
add_executable(279_Perfect_Squares dynamic_programming/279_Perfect_Squares.cpp)
add_executable(287_Find_the_Duplicate_Number two_pointer/287_Find_the_Duplicate_Number.cpp)
add_executable(300_Longest_Increasing_Subsequence dynamic_programming/300_Longest_Increasing_Subsequence.cpp)
add_executable(309_Best_Time_to_Buy_and_Sell_Stock_with_Cooldown dynamic_programming/309_Best_Time_to_Buy_and_Sell_Stock_with_Cooldown.cpp)
add_executable(322_Coin_Change dynamic_programming/322_Coin_Change.cpp)
add_executable(337_House_Robber_III tree/337_House_Robber_III.cpp)
add_executable(338_Counting_Bits dynamic_programming/338_Counting_Bits.cpp)
add_executable(347_Top_K_Frequent_Elements priority_queue/347_Top_K_Frequent_Elements.cpp)
add_executable(394_Decode_String stack/394_Decode_String.cpp)
add_executable(406_Queue_Reconstruction_by_Height sort/406_Queue_Reconstruction_by_Height.cpp)
add_executable(416_Partition_Equal_Subset_Sum dynamic_programming/416_Partition_Equal_Subset_Sum.cpp)
add_executable(438_Find_All_Anagrams_in_a_String sliding_window/438_Find_All_Anagrams_in_a_String.cpp)
add_executable(494_Target_Sum dynamic_programming/494_Target_Sum.cpp)
add_executable(516_Longest_Palindromic_Subsequence dynamic_programming/516_Longest_Palindromic_Subsequence.cpp)
add_executable(560_Subarray_Sum_Equals_K hash/560_Subarray_Sum_Equals_K.cpp)
add_executable(621_Task_Scheduler greedy/621_Task_Scheduler.cpp)
add_executable(647_Palindromic_Substrings string/647_Palindromic_Substrings.cpp)
add_executable(739_Daily_Temperatures stack/739_Daily_Temperatures.cpp)
add_executable(1143_Longest_Common_Subsequence dynamic_programming/1143_Longest_Common_Subsequence.cpp)
